[package]
edition = "2021"
name = "inputctl"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
[dependencies]
once_cell = "1.16.0"
[dependencies.windows]
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Globalization",
  "Win32_UI_Input_Ime",
]
version = "0.43.0"
[build-dependencies]
cc = {version = "1.0", features = ["parallel"]}
